major tui update